--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <img src="https://images.pexels.com/photos/1667427/pexels-photo-1667427.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Logo" class="logo" width="80px">
 
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="">Dome</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">About Us</a></li>
